fixed focus id name and save entry gap

--- a/static/index.css
+++ b/static/index.css
@@ -147,3 +147,8 @@ h4{
     text-align: center;
     justify-content: center;
 }
+
+#BudgetTitle{
+    text-align: center;
+    font-family: 'Palanquin', sans-serif;
+}
